Fixed overflow issue

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -513,6 +513,20 @@ input[type="checkbox"], input[type="radio"] {
     overflow-x: scroll !important;
     overflow-y: hidden !important;
 }
+.dropdown-menu li a{
+    font-size: 12.5px;
+    line-height: 14px;
+    padding: 8px 6px;
+}
+.dropdown-menu li a span{
+    overflow: hidden;
+    display: block !important;
+    white-space: pre-wrap;
+    word-wrap: break-word !important;
+}
+.dropdown-menu li a .glyphicon{
+    display: none !important;
+}
 
 .alert-info{
     background-color: transparent !important;
